# weblate_schemas

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  CHANGES.rst  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: lint.yml  setup.yml  test.yml
.reuse/: dep5
weblate_schemas/: __init__.py  loader.py  message.py  messages.py  test_loader.py  test_valid.py  validator.py
weblate_schemas/schemas/: weblate-backup.schema.json  weblate-component.schema.json  weblate-memory.jsonschema  weblate-memory.schema.json  weblate-messaging.schema.json  weblate-slack-messaging.schema.json  weblate-userdata.schema.json
weblate_schemas/tests/: __init__.py  test_loader.py  test_message.py  test_valid.py
