[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=78.0.2"
]

[project]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Internationalization",
  "Topic :: Software Development :: Localization",
  "Topic :: Utilities"
]
dependencies = [
  "fqdn>=1.5.1",
  "jsonschema>=4.23.0",
  "rfc3987>=1.3.8",
  "strict-rfc3339>=0.7"
]
description = "A collection of JSON schemas used by Weblate"
keywords = [
  "i18n",
  "l10n",
  "gettext",
  "weblate",
  "translate"
]
license = "MIT"
license-files = ["LICENSE"]
name = "weblate_schemas"
requires-python = ">=3.9"
version = "2025.2"

[[project.authors]]
email = "michal@weblate.org"
name = "Michal Čihař"

[project.entry-points."fedora.messages"]
"weblate.message.v1" = "weblate_schemas.messages:WeblateV1Message"

[project.optional-dependencies]
dev = [
  "weblate_schemas[lint,test]"
]
lint = [
  "pre-commit==4.2.0"
]
test = [
  "pytest",
  "pytest-cov",
  "fedora-messaging",
  "jsonschema[format]"
]

[project.readme]
content-type = "text/x-rst"
file = "README.rst"

[project.urls]
Documentation = "https://docs.weblate.org/"
Download = "https://github.com/WeblateOrg/weblate_schemas"
Funding = "https://weblate.org/donate/"
Homepage = "https://weblate.org/"
"Issue Tracker" = "https://github.com/WeblateOrg/weblate_schemas/issues"
"Source Code" = "https://github.com/WeblateOrg/weblate_schemas"
Twitter = "https://twitter.com/WeblateOrg"

[tool.check-manifest]
ignore = [
  "LICENSES/*",
  "json/*",
  ".reuse/dep5",
  "scripts/*",
  "*.toml",
  "*.yml",
  "*.yaml",
  "*.json",
  ".editorconfig",
  ".weblate"
]

[tool.isort]
profile = "black"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = [
  "D203",  # CONFIG: incompatible with D211
  "D212"  # CONFIG: incompatible with D213
]
select = [
  "E",
  "F",
  "B",
  "T10",
  "A",
  "C4",
  "C90",
  "YTT",
  "DJ",
  "UP",
  "D",
  "PD",
  "PGH",
  "PL",
  "TRY",
  "RUF",
  "ERA",
  "ICN",
  "ISC",
  "EXE",
  "INP",
  "PIE",
  "G",
  "PYI",
  "Q",
  "SIM",
  "TID",
  "RSE",
  "T20",
  "RET",
  "SLF",
  "N"
]

[tool.ruff.lint.mccabe]
max-complexity = 16

[tool.setuptools]
include-package-data = true
platforms = [
  "any"
]
zip-safe = false

[tool.setuptools.packages.find]
namespaces = true
