[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=78.0.2"
]

[project]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Internationalization",
  "Topic :: Software Development :: Localization",
  "Topic :: Utilities"
]
dependencies = [
  "fqdn>=1.5.1",
  "jsonschema>=4.23.0",
  "rfc3987>=1.3.8",
  "strict-rfc3339>=0.7"
]
description = "A collection of JSON schemas used by Weblate"
keywords = [
  "i18n",
  "l10n",
  "gettext",
  "weblate",
  "translate"
]
license = "MIT"
license-files = ["LICENSE"]
name = "weblate_schemas"
requires-python = ">=3.9"
version = "2025.5"

[[project.authors]]
email = "michal@weblate.org"
name = "Michal Čihař"

[project.entry-points."fedora.messages"]
"weblate.message.v1" = "weblate_schemas.messages:WeblateV1Message"

[project.optional-dependencies]
dev = [
  "weblate_schemas[lint,test]"
]
lint = [
  "pre-commit==4.2.0"
]
test = [
  "pytest",
  "pytest-cov",
  "fedora-messaging",
  "jsonschema[format]"
]

[project.readme]
content-type = "text/x-rst"
file = "README.rst"

[project.urls]
Documentation = "https://docs.weblate.org/"
Download = "https://github.com/WeblateOrg/weblate_schemas"
Funding = "https://weblate.org/donate/"
Homepage = "https://weblate.org/"
"Issue Tracker" = "https://github.com/WeblateOrg/weblate_schemas/issues"
"Source Code" = "https://github.com/WeblateOrg/weblate_schemas"
Twitter = "https://twitter.com/WeblateOrg"

[tool.check-manifest]
ignore = [
  "LICENSES/*",
  "json/*",
  ".reuse/dep5",
  "scripts/*",
  "*.toml",
  "*.yml",
  "*.yaml",
  "*.json",
  ".editorconfig",
  ".weblate"
]

[tool.isort]
profile = "black"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-safe-fixes = [
  "ANN",
  "D",
  "FA102",
  "FLY",
  "SIM",
  "TCH",
  "UP"
]
ignore = [
  "COM",  # CONFIG: No trailing commas
  "CPY001",
  "D203",  # CONFIG: incompatible with D211
  "D206",  # CONFIG: formatter
  "E501",  # CONFIG: using formatter
  "D212",  # CONFIG: incompatible with D213
  "ANN003",  # Missing type annotation for `**kwargs`
  "DOC"  # TODO: Ignore all pydoclint rules for now
]
preview = true
select = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 16

[tool.ruff.lint.per-file-ignores]
"weblate_schemas/tests/**.py" = ["S101"]

[tool.setuptools]
include-package-data = true
platforms = [
  "any"
]
zip-safe = false

[tool.setuptools.packages.find]
namespaces = true
