[metadata]
name = weblate_schemas
version = 2022.2
description = A collection of JSON schemas used by Weblate
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://weblate.org/
author = Michal Čihař
author_email = michal@cihar.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Internationalization
    Topic :: Software Development :: Localization
    Topic :: Utilities
download_url = https://github.com/WeblateOrg/weblate_schemas
keywords = i18n l10n gettext translate weblate
project_urls =
    Issue Tracker=https://github.com/WeblateOrg/weblate_schemas/issues
    Documentation=https://docs.weblate.org/
    Source Code=https://github.com/WeblateOrg/weblate_schemas
    Twitter=https://twitter.com/WeblateOrg
    Funding=https://weblate.org/donate/

[options]
packages = find_namespace:
python_requires = >=3.6
include_package_data = 1
zip_safe = 0

[flake8]
max-complexity = 16
extend-select = E,W1,W2,W3,W504,W505,W6,B
enable-extensions = B,C,D,DJ,F,G,I,M,N,R,SF,UPS
# False positives:
#  E203 - see https://github.com/psf/black/issues/315
extend-ignore = E203
exclude =
max-line-length = 88
per-file-ignores =

[pycodestyle]
extend-select = E,W1,W2,W3,W504,W505,W6
exclude =
max-line-length = 88

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88
known_first_party = weblate_schema
known_third_party = jsonschema
